added tflite classifier

--- a/FraudDetector/app/src/main/res/layout/imageview_layout.xml
+++ b/FraudDetector/app/src/main/res/layout/imageview_layout.xml
@@ -14,9 +14,31 @@
 
     <Button
         android:id="@+id/saveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/cancelBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline"
+        android:layout_width="wrap_content"
+        android:text="Cancel"
+        android:onClick="onCancel"
         android:layout_height="wrap_content" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
